--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "paper-dropdown-menu",
+  "name": "paper-dropdown-flat",
   "version": "1.1.3",
   "description": "An element that works similarly to a native browser select",
   "authors": [
@@ -12,14 +12,14 @@
     "dropdown",
     "select"
   ],
-  "main": "paper-dropdown-menu.html",
+  "main": "paper-dropdown-flat.html",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/PolymerElements/paper-dropdown-menu.git"
+    "url": "git://github.com/cpboyd/paper-dropdown-flat.git"
   },
   "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/paper-dropdown-menu",
+  "homepage": "https://github.com/cpboyd/paper-dropdown-flat",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.1.0",
     "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^1.0.0",
@@ -27,8 +27,9 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
     "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
     "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#^1.0.0",
-    "paper-input": "PolymerElements/paper-input#^1.0.9",
+    "paper-menu-input": "cpboyd/paper-menu-input#^1.0.0",
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.0.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.0.0",
     "paper-ripple": "PolymerElements/paper-ripple#^1.0.0",
     "paper-styles": "PolymerElements/paper-styles#^1.0.0"
   },
